--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ defaults:
       layout: "post"
 
 # Custom variables
-genre: "Science and Technology Blog" # Blog genre
+genero: "Cálculo diferencial" # Blog genre
 version: "1.0.1"    # Blog site version
 
 # Disqus comments
