--- a/_config.yml
+++ b/_config.yml
@@ -29,8 +29,8 @@ genero: "Cálculo diferencial" # Blog genre
 version: "1.0.1"    # Blog site version
 
 # Disqus comments
-#comments: true      # used to enable disqus comments on site
-#dsq_shortname: science-blog-template # disqus shortname
+comments: true      # used to enable disqus comments on site
+dsq_shortname: https-fjsantim-github-io-calculo-iii # disqus shortname
 
 # Options: Define which header/footer to use
 custom_header: false
